[tool.poetry]
name = "corpus-unpdf"
version = "0.0.12"
description = "Parse Philippine Supreme Court decisions issued in PDF format as text."
authors = ["Marcelino G. Veloso III <mars@veloso.one>"]
readme = "README.md"
license = "MIT"
homepage = "https://lawsql.com"
repository = "https://github.com/justmars/corpus-unpdf"
documentation = "https://justmars.github.io/corpus-unpdf"
classifiers = [
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Image Processing",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Typing :: Typed",
  "Development Status :: 4 - Beta",
  "Intended Audience :: Legal Industry",
  "Framework :: Pytest",
]

[tool.poetry.dependencies]
python = "^3.11"
start-ocr = "^0.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3"
pytest-env = "^0.8.1"
pytest-datadir = "^1.4.1"
pytest-cov = "^2.12.1"
pre-commit = "^2.21"
jupyter = "^1.0.0"
mkdocs = "^1.4.2"
mkdocstrings = { extras = ["python"], version = "^0.20.0" }
mkdocs-material = "^9.1"
rich = "^13.3.1"

[tool.pytest.ini_options]
env = ["MAGICK_HOME=/opt/homebrew/Cellar/imagemagick/7.1.1-10"]
minversion = "7.2"
filterwarnings = ['ignore::DeprecationWarning']
addopts = "-raxq --doctest-modules --cov tests"
testpaths = ["tests", "corpus_unpdf"]

[tool.ruff]
ignore = ["F401"]
fixable = ["F", "E", "W", "I001"]
select = ["F", "E", "W", "I001"]

[build-system]
requires = ["poetry-core>=1.3.2"]
build-backend = "poetry.core.masonry.api"
